--- a/A1/style.css
+++ b/A1/style.css
@@ -1,28 +1,94 @@
-#profilePicture {
-    height: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+body {
+    background: url(./background.png);
+    background-color: rgba(0, 0, 0, .4);
+    background-blend-mode: lighten;
+    background-attachment: fixed;
+    margin-top: 40px;
+
 }
+
 
 img {
     height: 50px;
 }
 
+section {
+    font-weight: 900;
+    text-shadow: 2px 2px 5px blueviolet;
+}
+
+a {
+    position: relative;
+    z-index: 1;
+}
+
+.navbar ul {
+    background-color: darkslategray;
+    list-style: none;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    position: fixed;
+    border-bottom: 5px ridge limegreen;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.navbar li {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 900;
+    font-size: large;
+    display: inline-block;
+    padding: 0px;
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+    margin-right: -4px;
+    text-align: center;
+    border-right: 3px ridge limegreen;
+}
+
+.navbar a {
+    color: aqua;
+    text-decoration: none;
+    background-color: black;
+    display: block;
+}
+
+.navbar a:hover {
+    background-color: gray;
+}
+
+.content {
+    background-color: rgba(255, 255, 255, .4);
+    width: 45%;
+    border: 5px ridge limegreen;
+    margin: auto;
+    margin-bottom: 30%;
+}
+
+.fancyText {
+    color: red;
+    text-shadow: 2px 2px 5px greenyellow;
+    font-style: italic;
+    text-align: justify;
+    font-weight: 100;
+    padding-left: 45%;
+}
+
 .centered {
     justify-content: center;
     display: grid;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
-.background::before {
-    content: "";
-    background-image: url(./background.png);
-    opacity: 0.25;
-    position: absolute;
-    background-size: cover;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
 
+#profilePicture {
+    height: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
